Add debug logging and individual OpenStack log files
This change introduces config.logging.debug that defaults
to False. Setting to True will enable debug logging for
OpenStack and nginx services.

Change-Id: I2eb428851d795e145c542879faf22b2fd9f8a29f

--- a/snap-overlay/templates/horizon-snap.conf.j2
+++ b/snap-overlay/templates/horizon-snap.conf.j2
@@ -4,6 +4,9 @@ state_path = {{ snap_common }}/lib
 # Log to systemd journal
 use_journal = True
 
+log_file = {{ snap_common }}/log/horizon.log
+debug = {{ logging_debug }}
+
 [oslo_concurrency]
 # Oslo Concurrency lock path
 lock_path = {{ snap_common }}/lock
