--- a/snap-overlay/templates/nginx.conf.j2
+++ b/snap-overlay/templates/nginx.conf.j2
@@ -24,8 +24,12 @@ http {
         # Logging Settings
         ##
 
-        error_log syslog:server=unix:/dev/log;
-        access_log syslog:server=unix:/dev/log;
+{% if logging_debug|lower == "true" %}
+        error_log {{ snap_common }}/log/nginx-error.log debug;
+{% else %}
+        error_log {{ snap_common }}/log/nginx-error.log;
+{% endif %}
+        access_log {{ snap_common }}/log/nginx-access.log;
 
         ##
         # Gzip Settings
