--- a/snap-overlay/templates/cinder-snap.conf.j2
+++ b/snap-overlay/templates/cinder-snap.conf.j2
@@ -22,6 +22,9 @@ volume_group = {{ lvm_backend_volume_group }}
 volume_backend_name=lvm-loop-based
 {% endif %}
 
+log_file = {{ snap_common }}/log/cinder.log
+debug = {{ logging_debug }}
+
 [oslo_concurrency]
 # Oslo Concurrency lock path
 lock_path = {{ snap_common }}/lock
