Add TLS OpenStack API endpoints
This patch provides TLS endpoints secured by a self-signed
certificate. Another patch will provide support for trusted CA-signed
certificates.

A new config.tls.generate-cert option is added that defaults to true.
When true, a self-signed certificate will be generated and OpenStack
API endpoints will be configured to use TLS with that self-signed
certificate. The following config options are added:

snap get microstack config.tls.generate-self-signed
snap get microstack config.tls.cacert-path
snap get microstack config.tls.cert-path
snap get microstack config.tls.key-path

Users can provide their own self-signed certificate by setting
generate-self-signed to false and storing their own certificates/key
at the paths specified by cacert-path, cert-path, and key-path.
'snap set' can also be used to change the cert/key file names.

If using clustering, the certificates/key will be copied from the
control node to the compute nodes. The config for cacert-path,
cert-path, and key-path will be set to the same values as on the
control node.

Other notable changes:
* The existing generate_selfsigned() function is modified to change
  the subject alternative name to be made up of the hostname and
  optionally an IP. The controller hostname and IP are used when
  generating the certificate for self-signed TLS endpoints. The
  hostname is now used instead of 'microstack.run' when generating
  the clustering certificate.
* This change also aligns logging for nginx and corresponding sites
  and moves all nginx sites to {snap_common}/etc/nginx/sites-enabled.

Change-Id: Iceea3127822404a3275fcf8a221cbedc4b52c217

--- a/snap-overlay/templates/microstack.json.j2
+++ b/snap-overlay/templates/microstack.json.j2
@@ -13,12 +13,19 @@
                 "version": 3
             }
         },
-        "auth_url": "http://{{ control_ip }}:5000",
+        "auth_url": "https://{{ control_ip }}:5000/v3",
         "endpoint_type": null,
+{% if tls_generate_self_signed|lower == "false" %}
+        "https_cacert": "{{ tls_cacert_path }}",
+        "https_cert": "{{ tls_cert_path }}",
+        "https_key": "{{ tls_key_path }}",
+        "https_insecure": false,
+{% else %}
         "https_cacert": "",
         "https_cert": "",
-        "https_insecure": false,
         "https_key": "",
+        "https_insecure": true,
+{% endif %}
         "profiler_conn_str": null,
         "profiler_hmac_key": null,
         "region_name": ""
