--- a/snap-overlay/templates/nova-snap.conf.j2
+++ b/snap-overlay/templates/nova-snap.conf.j2
@@ -7,6 +7,8 @@ state_path = {{ snap_common }}/lib
 # Log to systemd journal
 use_journal = True
 
+osapi_compute_listen_port = 8764
+
 # Set a hostname to be an FQDN to avoid issues with port binding for
 # which a hostname of a Nova node must match a hostname of an OVN chassis.
 host = {{ node_fqdn }}
