--- a/snap-overlay/templates/cinder-nginx.conf.j2
+++ b/snap-overlay/templates/cinder-nginx.conf.j2
@@ -1,5 +1,9 @@
 server {
-    listen 8776;
+    listen 8776 ssl;
+    ssl_certificate {{ tls_cert_path }};
+    ssl_certificate_key {{ tls_key_path }};
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
     access_log {{ snap_common }}/log/nginx-access.log;
     error_log {{ snap_common }}/log/nginx-error.log;
     location / {
