--- a/snap-overlay/templates/keystone-nginx.conf.j2
+++ b/snap-overlay/templates/keystone-nginx.conf.j2
@@ -1,7 +1,11 @@
 server {
-    listen 5000;
-    error_log syslog:server=unix:/dev/log;
-    access_log syslog:server=unix:/dev/log;
+    listen 5000 ssl;
+    ssl_certificate {{ tls_cert_path }};
+    ssl_certificate_key {{ tls_key_path }};
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    access_log {{ snap_common }}/log/nginx-access.log;
+    error_log {{ snap_common }}/log/nginx-error.log;
     location / {
         include {{ snap }}/usr/conf/uwsgi_params;
         uwsgi_param SCRIPT_NAME '';
