--- a/snap-overlay/templates/neutron-nginx.conf.j2
+++ b/snap-overlay/templates/neutron-nginx.conf.j2
@@ -1,5 +1,5 @@
 server {
-    listen {{ dashboard_port }} ssl;
+    listen 9696 ssl;
     ssl_certificate {{ tls_cert_path }};
     ssl_certificate_key {{ tls_key_path }};
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -7,8 +7,9 @@ server {
     access_log {{ snap_common }}/log/nginx-access.log;
     error_log {{ snap_common }}/log/nginx-error.log;
     location / {
-        include {{ snap }}/usr/conf/uwsgi_params;
-        uwsgi_param SCRIPT_NAME '';
-        uwsgi_pass unix://{{ snap_common }}/run/horizon.sock;
+        proxy_set_header X-Forwarded-Host $host:$server_port;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:9686;
     }
 }
