--- a/snap-overlay/templates/neutron.keystone.conf.j2
+++ b/snap-overlay/templates/neutron.keystone.conf.j2
@@ -2,8 +2,8 @@
 auth_strategy = keystone
 
 [keystone_authtoken]
-auth_uri = http://{{ control_ip }}:5000
-auth_url = http://{{ control_ip }}:5000
+auth_uri = https://{{ control_ip }}:5000/v3
+auth_url = https://{{ control_ip }}:5000/v3
 memcached_servers = {{ compute_ip }}:11211
 auth_type = password
 project_domain_name = default
@@ -11,3 +11,4 @@ user_domain_name = default
 project_name = service
 username = neutron
 password = {{ neutron_password }}
+cafile = {{ tls_cacert_path }}
