--- a/snap-overlay/templates/neutron.nova.conf.j2
+++ b/snap-overlay/templates/neutron.nova.conf.j2
@@ -3,7 +3,7 @@ notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
 
 [nova]
-auth_url = http://{{ control_ip }}:5000
+auth_url = https://{{ control_ip }}:5000/v3
 auth_type = password
 project_domain_name = default
 user_domain_name = default
@@ -11,3 +11,4 @@ region_name = {{ region_name }}
 project_name = service
 username = nova
 password = {{ nova_password }}
+cafile = {{ tls_cacert_path }}
