--- a/snap-overlay/templates/neutron.placement.conf.j2
+++ b/snap-overlay/templates/neutron.placement.conf.j2
@@ -1,5 +1,5 @@
 [placement]
-auth_url = http://{{ control_ip }}:5000
+auth_url = https://{{ control_ip }}:5000/v3
 auth_type = password
 project_domain_name = default
 user_domain_name = default
@@ -7,3 +7,4 @@ region_name = {{ region_name }}
 project_name = service
 username = placement
 password = {{ placement_password }}
+cafile = {{ tls_cacert_path }}
