--- a/snap-overlay/templates/nova.conf.d.cinder.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.cinder.conf.j2
@@ -1,5 +1,5 @@
-[glance]
-service_type = image
-service_name = glance
+[cinder]
+service_type = volume
+service_name = cinder
 region_name = {{ region_name }}
 cafile = {{ tls_cacert_path }}
