--- a/snap-overlay/templates/nova.conf.d.placement.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.placement.conf.j2
@@ -1,6 +1,6 @@
 [placement]
-auth_uri = http://{{ control_ip }}:5000
-auth_url = http://{{ control_ip }}:5000
+auth_uri = https://{{ control_ip }}:5000/v3
+auth_url = https://{{ control_ip }}:5000/v3
 memcached_servers = {{ compute_ip }}:11211
 auth_type = password
 project_domain_name = default
@@ -9,3 +9,4 @@ project_name = service
 username = nova
 password = {{ nova_password }}
 region_name = {{ region_name }}
+cafile = {{ tls_cacert_path }}
