--- a/snap-overlay/templates/placement.conf.d.keystone.conf.j2
+++ b/snap-overlay/templates/placement.conf.d.keystone.conf.j2
@@ -1,6 +1,6 @@
 [keystone_authtoken]
-auth_uri = http://{{ control_ip }}:5000
-auth_url = http://{{ control_ip }}:5000
+auth_uri = https://{{ control_ip }}:5000/v3
+auth_url = https://{{ control_ip }}:5000/v3
 memcached_servers = {{ compute_ip }}:11211
 auth_type = password
 project_domain_name = default
@@ -8,6 +8,7 @@ user_domain_name = default
 project_name = service
 username = placement
 password = {{ placement_password }}
+cafile = {{ tls_cacert_path }}
 
 [paste_deploy]
 flavor = keystone
