Add debug logging for various nginx sites
A previous patch provided debug logging support, including
nginx.conf.j2, but failed to provide support to any nginx
site templates.

Change-Id: I7375fa52f2db847deee5c8181e47e68079714ab9

--- a/snap-overlay/templates/cluster-nginx.conf.j2
+++ b/snap-overlay/templates/cluster-nginx.conf.j2
@@ -1,7 +1,11 @@
 server {
     listen 10002 ssl;
-    error_log syslog:server=unix:/dev/log;
-    access_log syslog:server=unix:/dev/log;
+{% if logging_debug|lower == "true" %}
+    error_log {{ snap_common }}/log/nginx-error.log debug;
+{% else %}
+    error_log {{ snap_common }}/log/nginx-error.log;
+{% endif %}
+    access_log {{ snap_common }}/log/nginx-access.log;
 {% if is_clustered %}
     ssl_session_timeout 1d;
     ssl_session_tickets off;
