--- a/snap-overlay/templates/neutron-nginx.conf.j2
+++ b/snap-overlay/templates/neutron-nginx.conf.j2
@@ -5,7 +5,11 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
     access_log {{ snap_common }}/log/nginx-access.log;
+{% if logging_debug|lower == "true" %}
+    error_log {{ snap_common }}/log/nginx-error.log debug;
+{% else %}
     error_log {{ snap_common }}/log/nginx-error.log;
+{% endif %}
     location / {
         proxy_set_header X-Forwarded-Host $host:$server_port;
         proxy_set_header X-Forwarded-Server $host;
