Enable TLS OpenStack endpoints for trusted certs
Change-Id: If4ecf2217b981e79362a8b6c0a33d22c08a05d48

--- a/snap-overlay/templates/glance.conf.d.keystone.conf.j2
+++ b/snap-overlay/templates/glance.conf.d.keystone.conf.j2
@@ -1,6 +1,6 @@
 [keystone_authtoken]
-auth_uri = https://{{ control_ip }}:5000/v3
-auth_url = https://{{ control_ip }}:5000/v3
+auth_uri = https://coreycbryant.com:5000/v3
+auth_url = https://coreycbryant.com:5000/v3
 memcached_servers = {{ compute_ip }}:11211
 auth_type = password
 project_domain_name = default
