--- a/snap-overlay/templates/microstack.json.j2
+++ b/snap-overlay/templates/microstack.json.j2
@@ -13,7 +13,7 @@
                 "version": 3
             }
         },
-        "auth_url": "https://{{ control_ip }}:5000/v3",
+        "auth_url": "https://coreycbryant.com:5000/v3",
         "endpoint_type": null,
 {% if tls_generate_self_signed|lower == "false" %}
         "https_cacert": "{{ tls_cacert_path }}",
