--- a/snap-overlay/templates/neutron.placement.conf.j2
+++ b/snap-overlay/templates/neutron.placement.conf.j2
@@ -1,5 +1,5 @@
 [placement]
-auth_url = https://{{ control_ip }}:5000/v3
+auth_url = https://coreycbryant.com:5000/v3
 auth_type = password
 project_domain_name = default
 user_domain_name = default
