--- a/snap-overlay/templates/neutron_ovn_metadata_agent.ini.j2
+++ b/snap-overlay/templates/neutron_ovn_metadata_agent.ini.j2
@@ -1,6 +1,6 @@
 [DEFAULT]
 
-nova_metadata_host = {{ control_ip }}
+nova_metadata_host = coreycbryant.com
 
 metadata_proxy_shared_secret = {{ ovn_metadata_proxy_shared_secret }}
 
