--- a/snap-overlay/templates/nova.conf.d.console.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.console.conf.j2
@@ -11,7 +11,7 @@ html5proxy_port = 6082
 
 enabled = True
 agent_enabled = True
-html5proxy_base_url = http://{{ control_ip }}:6082/spice_auto.html
+html5proxy_base_url = http://coreycbryant.com:6082/spice_auto.html
 server_listen = {{ compute_ip }}
 server_proxyclient_address = {{ compute_ip }}
 keymap = en-us
