--- a/snap-overlay/templates/cinder.database.conf.j2
+++ b/snap-overlay/templates/cinder.database.conf.j2
@@ -1,2 +1,2 @@
 [database]
-connection = mysql+pymysql://cinder:{{ cinder_password }}@{{ control_ip }}:{{ mysql_port }}/cinder
+connection = mysql+pymysql://cinder:{{ cinder_password }}@coreycbryant.com:{{ mysql_port }}/cinder
