--- a/snap-overlay/templates/keystone.database.conf.j2
+++ b/snap-overlay/templates/keystone.database.conf.j2
@@ -1,2 +1,2 @@
 [database]
-connection = mysql+pymysql://keystone:{{ keystone_password }}@{{ control_ip }}:{{ mysql_port }}/keystone
+connection = mysql+pymysql://keystone:{{ keystone_password }}@coreycbryant.com:{{ mysql_port }}/keystone
