--- a/snap-overlay/templates/nova.conf.d.neutron.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.neutron.conf.j2
@@ -1,6 +1,6 @@
 [neutron]
-url = https://{{ control_ip }}:9696
-auth_url = https://{{ control_ip }}:5000/v3
+url = https://coreycbryant.com:9696
+auth_url = https://coreycbryant.com:5000/v3
 memcached_servers = {{ compute_ip }}:11211
 auth_type = password
 project_domain_name = default
