--- a/snap-overlay/templates/placement.conf.d.database.conf.j2
+++ b/snap-overlay/templates/placement.conf.d.database.conf.j2
@@ -1,2 +1,2 @@
 [placement_database]
-connection = mysql+pymysql://placement:{{ placement_password }}@{{ control_ip }}:{{ mysql_port }}/placement
+connection = mysql+pymysql://placement:{{ placement_password }}@coreycbryant.com:{{ mysql_port }}/placement
